syntax = "proto3";

option java_package = "com.chatty.AuthService.grpc";
option java_multiple_files = true;
option java_outer_classname = "AuthProto";

service AuthService {
  rpc GenerateToken(TokenRequest) returns (TokenResponse);
  rpc ValidateToken(TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string email = 1;
  int32  userId = 2;
  string token = 3; // For validate call
}

message TokenResponse {
  bool valid = 1;
  string token = 2;
  string message = 3;
  string email = 4;
  string userId = 5;
}
